# obsidian-ai-clipper

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  DProjectCursorObsidian-AI-Clippersrcfetcherstatic_fetcher.py  DProjectCursorObsidian-AI-Clipperteststest_fetcher.py  README.md  docker-compose.yml  pyproject.toml  xmxq.txt
.superpowers/sdd/: progress.md  review-0d29b9d-HEAD.md  review-2c420eb-HEAD.md  review-38e5177-226d13b.md  review-38e5177-HEAD-v2.md  review-46a1e74-HEAD.md  review-7bedfd1-HEAD.md  review-b332ca3-HEAD.md  review-b973af5-HEAD.md  review-e50c530-HEAD.md  review-ebbc107-HEAD.md  review-f37d16e-HEAD.md  review-fca11d6-HEAD.md  review-task9-combined.md  review-task9-fix.md  review-task9-original.md  task-1-brief.md  task-1-report.md  task-10-brief.md  task-10-report.md  task-11-brief.md  task-11-report.md  task-12-brief.md  task-12-report.md  task-13-brief.md  task-13-report.md  task-14-brief.md  task-14-report.md  task-15-brief.md  task-15-report.md  task-16-brief.md  task-16-report.md  task-2-brief.md  task-2-report.md  task-3-brief.md  task-3-report.md  task-4-brief.md  task-4-report.md  task-5-brief.md  (+13 more)
chrome-extension/: GUIDE.md  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
prompts/: clip.md
scripts/: deploy.sh  generate_icon.py
src/: config.py  main.py
tests/: test_ai_client.py  test_api.py  test_config.py  test_e2e.py  test_extractor.py  test_fetcher.py  test_models.py  test_rate_limit.py  test_security.py  test_storage.py  test_url.py  test_vault_writer.py  test_web.py  test_worker.py
(+24 files in other folders)
